[gd_scene load_steps=11 format=3 uid="uid://la6hglf0tura"]

[ext_resource type="Script" path="res://Scripts/Game/Main.gd" id="1_vf5nn"]
[ext_resource type="PackedScene" uid="uid://b1ugkpvbo0utw" path="res://Scenes/Game/WorldBorder.tscn" id="2_b1du0"]
[ext_resource type="Theme" uid="uid://dck5wvqkfemjm" path="res://GDResources/MainTheme.tres" id="3_cwvof"]
[ext_resource type="Script" path="res://Scripts/UI/EscapeLayer.gd" id="7_1osje"]
[ext_resource type="PackedScene" uid="uid://bwcxgw014glpw" path="res://Scenes/UI/SettingsMenu.tscn" id="7_aufso"]
[ext_resource type="PackedScene" uid="uid://b7i168t34cg33" path="res://Scenes/UI/EscapeMenu.tscn" id="8_ds3nv"]
[ext_resource type="LabelSettings" uid="uid://dtxnkyfqv658e" path="res://GDResources/LabelMedium.tres" id="9_5v2rt"]
[ext_resource type="Script" path="res://Scripts/UI/Components/LabelPercentMult.gd" id="10_0egqj"]
[ext_resource type="Script" path="res://Scripts/UI/Components/LabelCounter.gd" id="10_ers3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pborx"]
size = Vector2(1702.5, 218)

[node name="Main" type="Node2D"]
script = ExtResource("1_vf5nn")

[node name="WorldBorder" parent="." instance=ExtResource("2_b1du0")]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(766, 1213)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
shape = SubResource("RectangleShape2D_pborx")

[node name="Balls" type="Node2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
layout_mode = 3
anchor_left = 0.776875
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
theme = ExtResource("3_cwvof")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -47.5
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="UILayer/UI/MarginContainer"]
layout_mode = 2

[node name="ScoreTxt" type="Label" parent="UILayer/UI/MarginContainer/GridContainer"]
layout_mode = 2
text = "Score"
label_settings = ExtResource("9_5v2rt")

[node name="ScoreVar" type="Label" parent="UILayer/UI/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("9_5v2rt")
horizontal_alignment = 2
script = ExtResource("10_ers3y")

[node name="SpeedTxt" type="Label" parent="UILayer/UI/MarginContainer/GridContainer"]
layout_mode = 2
text = "Speed"
label_settings = ExtResource("9_5v2rt")

[node name="SpeedVar" type="Label" parent="UILayer/UI/MarginContainer/GridContainer"]
layout_mode = 2
text = "100%"
label_settings = ExtResource("9_5v2rt")
horizontal_alignment = 2
script = ExtResource("10_0egqj")

[node name="LivesTxt" type="Label" parent="UILayer/UI/MarginContainer/GridContainer"]
layout_mode = 2
text = "Lives"
label_settings = ExtResource("9_5v2rt")

[node name="LivesContainer" type="HBoxContainer" parent="UILayer/UI/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="EscapeLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("game_root", "escape_menu", "settings_menu")]
process_mode = 3
visible = false
script = ExtResource("7_1osje")
game_root = NodePath("..")
escape_menu = NodePath("UI/MarginContainer2/EscapeMenu")
settings_menu = NodePath("UI/MarginContainer2/SettingMenu")

[node name="UI" type="Control" parent="EscapeLayer"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_cwvof")

[node name="MarginContainer2" type="MarginContainer" parent="EscapeLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EscapeMenu" parent="EscapeLayer/UI/MarginContainer2" instance=ExtResource("8_ds3nv")]
layout_mode = 2

[node name="SettingMenu" parent="EscapeLayer/UI/MarginContainer2" instance=ExtResource("7_aufso")]
visible = false
layout_mode = 2
